# wall

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/design/: wall-v1-design-spec.md  wall-v1-ux-ixd-spec.md
docs/implementation/: category-editor-interaction-report.md  installer-process-lifecycle-report.md  wall-v1-contract-report.md  wallpaper-library-management-report.md
samples/: README.md
scripts/: create-sample-wallpapers.ps1  package-installer.ps1  package-portable.ps1  prepare-mpv.ps1  verify-installer-lifecycle.ps1  verify-portable.ps1  verify-wallpaper-host.ps1
src/: App.test.ts  App.vue  DetailView.test.ts  LibraryView.test.ts  SettingsView.test.ts  StyleContract.test.ts  api.test.ts  api.ts  categoryCreator.ts  env.d.ts  main.ts  playbackOptions.ts  router.ts  store.test.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/tray/: active.rgba  idle.rgba  paused.rgba
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs  media.rs  model.rs  monitor.rs  player.rs  storage.rs  tray.rs
src-tauri/tests/: core_test.rs  media_test.rs  model_test.rs  player_test.rs  storage_test.rs
src-tauri/windows/: cleanup-mpv.ps1  installer-hooks.nsh
src/components/: WallIcon.vue  WallSelect.test.ts  WallSelect.vue
(+35 files in other folders)
